# makair

src/linux-display/: Cargo.toml
src/linux-display/src/: main.rs  support.rs
src/software/firmware/includes/: parameters.h
src/software/firmware/trigger-function/trigger-cpp/: high.txt  low.txt  no.txt  trigger_flag.cpp  trigger_flag.h  trigger_flag_test.cpp
src/software/firmware/trigger-function/trigger-py/: pressure_with_high_spontaneous_breathing.txt  pressure_with_low_spontaneous_breathing.txt  pressure_with_no_spontaneous_breathing.txt  trigger_flag.py
src/software/telemetry/src/: bin.rs  lib.rs  parsers.rs  state.rs  structures.rs
