[package]
name = "linux-display"
version = "0.1.0"
authors = ["Quentin ADAM <quentin.adam@waxzce.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod_glium = "0.69.0"
conrod_winit = "0.69.0"
conrod_core = "0.69.0"
plotters = {version = "^0.2.12", default_features = false, features = ["image_encoder", "chrono", "line_series", "palette", "ttf"]}
chrono = "0.4.11"
rand = "0.7.3"
log = "0.4.8"
simple_logger = "1.6.0"
image = "0.23.3"
glium = "0.24"
winit = "0.19"